# rom-operator-inference-Python3

./: .buildinfo  .flake8  .gitignore  .pre-commit-config.yaml  CODE_OF_CONDUCT.md  DETAILS.md  DOCUMENTATION.md  LICENSE  Makefile  OpInf.py  README.md  TEST.md  basis_example.npy  check_docs.py  data_scaling_example.npy  genindex.html  index.html  integration_helpers.py  lstsq_example.npz  objects.inv  operator_inference.py  opinf_demo.py  opinf_helper.py  opinf_readme.md  projection_helpers.py  py-modindex.html  pyproject.toml  search.html  searchindex.js  setup.cfg  setup.py  tox.ini
.github/workflows/: deploy_docs.yml  docs.yml  test_docs.yml  test_src.yml  test_style.yml  tests.yml
GEMS/: OutputTecASCIIdata.m  chemistry_conversions.py  csv2tec.py  heat_opinf_data.h5  importGridFile.m  importTecASCIIdata.m  main.py  opinf_demo.py  projection_helpers.py  readme.tex  save_as_tec.m  scaling_tools.py  tec2h5.py  test.txt  thesis_figures.py
GEMS/chengs_data/TimeTraceData/: ReadMe.txt  point_mon_1.txt  point_mon_10.txt  point_mon_11.txt  point_mon_12.txt  point_mon_2.txt  point_mon_3.txt  point_mon_4.txt  point_mon_5.txt  point_mon_6.txt  point_mon_7.txt  point_mon_8.txt  point_mon_9.txt  read_data.py
_modules/: index.html
_modules/opinf/basis/: _base.html  _linear.html  _multi.html  _pod.html
_modules/opinf/ddt/: _base.html  _finite_difference.html  _interpolation.html
_modules/opinf/lift/: _base.html  _polynomial.html
_modules/opinf/lstsq/: _base.html  _tikhonov.html  _total.html  _tsvd.html
_modules/opinf/operators/: _affine.html  _base.html  _interpolate.html  _nonparametric.html
_modules/opinf/post/: _errors.html
_modules/opinf/pre/: _base.html  _multi.html  _shiftscale.html
_modules/opinf/roms/: _bayes.html  _nonparametric.html  _parametric.html
_modules/opinf/utils/: _gridsearch.html  _hdf5.html  _mpl_config.html  _repr.html  _requires.html  _timer.html
_sources/source/: index.md
_sources/source/api/: basis.ipynb  basis.md  ddt.ipynb  lift.ipynb  lift.md  lstsq.ipynb  main.md  missing.rst  models.md  operators.md  pre.ipynb  roms.md  utils.md
_sources/source/contributing/: code_anatomy.md  documentation.md  how_to_contribute.md  testing.md
_sources/source/opinf/: changelog.md  intro.ipynb  (+3 more)
docs/: _config.yml  _toc.yml  bib2md.py  literature.bib  references.bib
docs/_static/: properties.css
docs/content/: index.md
docs/source/: index.md
examples/: data_driven_heat.h5  data_driven_heat.ipynb  heat_1D.ipynb  heat_opinf_data.h5  minimax.py  opinf_demo.py  project_and_save.py  tutorial.ipynb
img/: Makefile  README.md  config.tex  details.tex  documentation.tex  notation.tex
rom_operator_inference/: __init__.py  _affine.py  _affine_inference.py  _affine_inferred.py  _affine_intrusive.py  _affines.py  _base.py  _core.py  _interpolated.py  _intrusive.py  core.py  integration_helpers.py  opinf.py  opinf_helper.py  post.py  pre.py  projection_helpers.py  utils.py
rom_operator_inference/_affine/: __init__.py
rom_operator_inference/_interpolate/: __init__.py
rom_operator_inference/post/: _errors.py
rom_operator_inference/pre/: __init__.py  _finite_differences.py  _reprojection.py  _shift_scale.py
rom_operator_inference/utils/: __init__.py
source/: index.html
source/api/: basis.html  ddt.html  lift.html  lstsq.html  main.html  missing.html  models.html  operators.html  post.html  pre.html  roms.html  utils.html
source/contributing/: code_anatomy.html  documentation.html  how_to_contribute.html  notation.html  testing.html
source/opinf/: bibliography.html  changelog.html  installation.html  intro.html  literature.html
source/tutorials/: basics.html  euler.html  heat_equation.html  inputs.html  parametric.html  preprocessing.html  reduction.html
src/opinf/: __init__.py  _multivar.py  errors.py
src/rom_operator_inference/: __init__.py  _base.py  _inferred.py  _intrusive.py  errors.py
tests/: _common.py  test_affine.py  test_base.py  test_core.py  test_docs.py  test_inferred.py  test_init.py  test_interpolate.py  test_intrusive.py  test_multivar.py  test_opinf.py  test_post.py  test_pre.py  test_utils.py  test_version.py
tests/_core/: __init__.py  test_base.py  test_inferred.py  test_init.py  test_intrusive.py
tests/_newcore/: __init__.py  test_base.py  test_nonparametric.py  test_operators.py
tests/basis/: conftest.py  test_base.py  test_linear.py  test_multi.py  test_pod.py
tests/core/: __init__.py  test_base.py  test_inferred.py  test_init.py  test_intrusive.py
tests/ddt/: conftest.py  test_base.py  test_finite_difference.py  test_interpolation.py
tests/lift/: test_base.py  test_polynomial.py
tests/lstsq/: test_base.py  test_init.py  test_tikhonov.py  test_total.py  test_tsvd.py
tests/model_selection/: test_tikhonov.py
tests/models/: test_base.py
tests/operators/: __init__.py  test_affine.py  test_base.py  test_interpolate.py  test_nonparametric.py  test_poly_operator.py
tests/operators_new/: __init__.py  test_base.py  test_interpolate.py  test_nonparametric.py
tests/post/: __init__.py  conftest.py  test_errors.py
tests/pre/: __init__.py  conftest.py  test_base.py  test_basis.py  test_finite_difference.py  test_multi.py  test_multivar.py  test_pre.py  test_reprojection.py  test_shift_scale.py  test_shiftscale.py
tests/regression/: test_basics.py  test_inputs.py  test_lifting.py  test_parametric.py
tests/roms/: __init__.py  test_base.py  test_bayes.py  test_nonparametric.py  test_parametric.py
tests/roms_new/: __init__.py  test_base.py
tests/utils/: _test_reprojection.py  conftest.py  test_finite_difference.py  test_gridsearch.py  test_hdf5.py  test_kronecker.py  test_mpl_config.py  test_repr.py  test_requires.py  test_solver.py  test_timer.py
(+2193 files in other folders)
