[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "opinf"
description = "Operator Inference for data-driven model reduction of dynamical systems."
dynamic = ["version"]
authors = [
    { name = "Willcox Research Group", email = "kwillcox@oden.utexas.edu" },
]
maintainers = [{ name = "Shane A. McQuarrie", email = "shanemcq@utexas.edu" }]
readme = { file = "README.md", content-type = "text/markdown" }
requires-python = ">=3.9"
license = { file = "LICENSE" }
keywords = [
    "operator inference",
    "model reduction",
    "scientific machine learning",
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Natural Language :: English",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering",
    "Intended Audience :: Science/Research",
    "Development Status :: 4 - Beta",
]
dependencies = [
    "h5py>=3.9.0",
    "numpy>=1.23.2",
    "scipy>=1.10.1",
    "matplotlib>=3.7",
    "scikit-learn>=1.3.0",
]

[project.optional-dependencies]
tests = [
    "pytest>=6.0.2",
    "pytest-cov>=2.12.1",
    "black>=23.10.0",
    "flake8>=3.9.0",
    "pre-commit>=3.5.0",
]
docs = [
    "bibtexparser>=2.0.0b7",
    "chardet>=5.0",
    "docutils==0.17.1",
    "jupyter-book>=0.14.0,<0.15.0",
    "jupyterlab>=4.0.9",
    "numpydoc>=1.2",
    "pandas>=2.0.3",
    "sphinx-design>=0.1.0",
    "sphinxcontrib-mermaid>=0.7.1",
]

[project.urls]
homepage = "https://willcox-research-group.github.io/rom-operator-inference-Python3/source/index.html"
documentation = "https://willcox-research-group.github.io/rom-operator-inference-Python3/source/index.html"
repository = "https://github.com/Willcox-Research-Group/rom-operator-inference-Python3.git"

[tool.black]
line-length = 79

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.setuptools.dynamic]
version = { attr = "opinf.__version__" }
