[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "opinf"
description = "Operator Inference for data-driven model reduction of dynamical systems."
dynamic = ["version"]
authors = [
    { name = "Willcox Research Group", email = "kwillcox@oden.utexas.edu" },
]
maintainers = [{ name = "Shane A. McQuarrie", email = "smcquar@sandia.gov" }]
readme = { file = "README.md", content-type = "text/markdown" }
requires-python = ">=3.9"
license = { file = "LICENSE" }
keywords = [
    "operator inference",
    "model reduction",
    "data-driven model reduction",
    "scientific machine learning",
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Natural Language :: English",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering",
    "Intended Audience :: Science/Research",
    "Development Status :: 4 - Beta",
]
dependencies = [
    "h5py>=3.9.0",
    "numpy>=1.23.2",
    "scipy>=1.10.1",
    "matplotlib>=3.7",
    "scikit-learn>=1.3.0",
]

[project.optional-dependencies]
tests = [
    "pytest>=6.0.2",
    "pytest-cov>=2.12.1",
    "black>=23.10.0",
    "flake8>=3.9.0",
    "pre-commit>=3.5.0",
]
docs = [
    "bibtexparser>=2.0.0b7",
    "chardet",
    "docutils",
    "jupyter-book",
    "jupyterlab",
    "numpydoc",
    "pandas",
    "sphinx-design",
    "sphinxcontrib-mermaid",
]

[project.urls]
homepage = "https://willcox-research-group.github.io/rom-operator-inference-Python3/source/index.html"
documentation = "https://willcox-research-group.github.io/rom-operator-inference-Python3/source/index.html"
repository = "https://github.com/Willcox-Research-Group/rom-operator-inference-Python3.git"

[tool.black]
line-length = 79

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.setuptools.dynamic]
version = { attr = "opinf.__version__" }
